--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
  <body>
     <header class="container">
         <nav>
-            <a class="favorite" href="/Избранное.html"><img src="C:\Users\karma\Desktop\www\img\img.png" alt="Избранное"></a>
+            <a class="favorite" href="/Избранное.html"><img src="img\img.png" alt="Избранное"></a>
             <ul class="burgerMenu" id="burgerMenu">
                 <li><div class="burger" id="burger">
                     <div class="bar"></div>
@@ -17,24 +17,24 @@
                 </div></li>
                 <li><div class="popup">
                     <ul id="popup" style="display: none;">
-                        <li><a href="C:\Users\karma\Desktop\www\О проекте.html">О проекте</a></li>
-                        <li><a href="C:\Users\karma\Desktop\www\экспозиция.html">Экспозиция</a></li>
-                        <li><a href="C:\Users\karma\Desktop\www\художники.html">Художники</a></li>
-                        <li><a href="C:\Users\karma\Desktop\www\Связаться с нами.html">Связаться с нами</a></li>
+                        <li><a href="О проекте.html">О проекте</a></li>
+                        <li><a href="экспозиция.html">Экспозиция</a></li>
+                        <li><a href="художники.html">Художники</a></li>
+                        <li><a href="Связаться с нами.html">Связаться с нами</a></li>
                     </ul>
                 </div></li>
             </ul>
             <div id="MainMenu">
                 <ul class="first">
-                    <li><a href="C:\Users\karma\Desktop\www\О проекте.html">О проекте</a></li>
-                    <li><a href="C:\Users\karma\Desktop\www\экспозиция.html">Экспозиция</a></li>
-                    <li><a href="C:\Users\karma\Desktop\www\художники.html">Художники</a></li>
-                    <li><a href="C:\Users\karma\Desktop\www\Связаться с нами.html">Связаться с нами</a></li>
+                    <li><a href="О проекте.html">О проекте</a></li>
+                    <li><a href="экспозиция.html">Экспозиция</a></li>
+                    <li><a href="художники.html">Художники</a></li>
+                    <li><a href="Связаться с нами.html">Связаться с нами</a></li>
                 </ul>
             </div>
             <div class="line"></div>
             <ul class="second">
-                <li class="active"><a href="C:\Users\karma\Desktop\www\index.html"><b>НОЯБРЬ</b></a></li>
+                <li class="active"><a href="index.html"><b>НОЯБРЬ</b></a></li>
                 <div class="arrow"><div></div></div>
                 <li><a href="">НОЯБРЬ <sup class="small">студия</sup></a></li>
                 <div class="arrow-2"><div></div></div>
