--- a/О проекте.html
+++ b/О проекте.html
@@ -4,22 +4,22 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
- <base href="https://example.com/page.html">
- <link rel="stylesheet" href="C:\Users\karma\Desktop\www\css\main.css">
+ <base href="https://karmazinwlad.github.io/Oktyabr/">
+ <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
     <header class="container">
         <nav>
-            <a class="favorite" href="/Избранное.html"><img src="C:\Users\karma\Desktop\www\img\img.png" alt="Избранное"></a>
+            <a class="favorite" href="/Избранное.html"><img src="img\img.png" alt="Избранное"></a>
             <ul class="first">
-                <li class="active"><a href="C:\Users\karma\Desktop\www\О проекте.html">О проекте</a></li>
-                <li><a href="C:\Users\karma\Desktop\www\экспозиция.html">Экспозиция</a></li>
-                <li><a href="C:\Users\karma\Desktop\www\художники.html">Художники</a></li>
-                <li><a href="/Связаться с нами.html">Связаться с нами</a></li>
+                <li class="active"><a href="О проекте.html">О проекте</a></li>
+                <li><a href="экспозиция.html">Экспозиция</a></li>
+                <li><a href="художники.html">Художники</a></li>
+                <li><a href="Связаться с нами.html">Связаться с нами</a></li>
             </ul>
             <div class="line"></div>
             <ul class="second">
-                <li><a href="C:\Users\karma\Desktop\www\index.html"><b>НОЯБРЬ</b></a></li>
+                <li><a href="index.html"><b>НОЯБРЬ</b></a></li>
                 <li>О проекте</li>
                 <li><a href="">НОЯБРЬ <sup class="small">студия</sup></a></li>
                 <div class="arrow-2"><div></div></div>
