--- a/художники.html
+++ b/художники.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
- <base href="https://example.com/page.html">
+    <base href="https://karmazinwlad.github.io/Oktyabr/">
  <link rel="stylesheet" href="C:\Users\karma\Desktop\www\css\main.css">
  </head>
  <body>
@@ -12,14 +12,14 @@
         <nav>
             <a class="favorite" href="/Избранное.html"><img src="C:\Users\karma\Desktop\www\img\img.png" alt="Избранное"></a>
             <ul class="first">
-                <li><a href="C:\Users\karma\Desktop\www\О проекте.html">О проекте</a></li>
-                <li><a href="C:\Users\karma\Desktop\www\экспозиция.html">Экспозиция</a></li>
-                <li class="active"><a href="C:\Users\karma\Desktop\www\художники.html">Художники</a></li>
-                <li><a href="/Связаться с нами.html">Связаться с нами</a></li>
+                <li><a href="О проекте.html">О проекте</a></li>
+                <li><a href="экспозиция.html">Экспозиция</a></li>
+                <li class="active"><a href="художники.html">Художники</a></li>
+                <li><a href="Связаться с нами.html">Связаться с нами</a></li>
             </ul>
             <div class="line"></div>
             <ul class="second">
-                <li><a href="C:\Users\karma\Desktop\www\index.html"><b>НОЯБРЬ</b></a></li>
+                <li><a href="index.html"><b>НОЯБРЬ</b></a></li>
                 <li>Художники</li>
                 <li><a href="">НОЯБРЬ <sup class="small">студия</sup></a></li>
                 <div class="arrow-2"><div></div></div>
@@ -30,7 +30,7 @@
     <main>
         <nav>
             <ul class="ul">
-                <li><a href="C:\Users\karma\Desktop\www\художники.html#КАРМАЗИН">КАРМАЗИН ВАСИЛИЙ ОЛЕГОВИЧ</a></li>
+                <li><a href="художники.html#КАРМАЗИН">КАРМАЗИН ВАСИЛИЙ ОЛЕГОВИЧ</a></li>
                 <li><a href="#">АБАШИН</a></li>
                 <li><a href="#">ВИКТОР ФЁДОРОВИЧ АБОЛИХИН</a></li>
                 <li><a href="#">КОНСТАНТИН ЕГОРОВИЧ АБУТКОВ</a></li>
@@ -40,7 +40,7 @@
                 <li><a href="#">ИВАН АКИМОВИЧ АЛАДЖАЛОВ</a></li>
             </ul>
         </nav>
-        <img id="КАРМАЗИН" src="C:\Users\karma\Desktop\www\img\Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина">
+        <img id="КАРМАЗИН" src="img\Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина">
     </main>
  </body>
 </html>
