--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <title>ГаллереяОктбрь</title>
-    <base href="https://karmazinwlad.github.io/Oktyabr/">
+    <base href="C:\Users\karma\Desktop\site\">
     <link rel="stylesheet" href="css\main.css">
     <style type="text/css" id="operaUserStyle"></style>
 </head>
@@ -15,17 +15,17 @@
                     <div class="bar"></div>
                     <div class="bar"></div>
                     <div class="bar"></div>
-                </div></li>
-                <li><div class="popup">
-                    <ul id="popup" style="display: none;">
+                </div></li> 
+                <li>
+                    <ul id="popup" class="popup" style="display: none;">
                         <li><a href="О проекте.html">О проекте</a></li>
                         <li><a href="экспозиция.html">Экспозиция</a></li>
                         <li><a href="художники.html">Художники</a></li>
                         <li><a href="Связаться с нами.html">Связаться с нами</a></li>
                     </ul>
-                </div></li>
+                </li>
             </ul>
-            <div id="MainMenu">
+            <div id="MainMenu" class="MainMenu">
                 <ul class="first">
                     <li><a href="О проекте.html">О проекте</a></li>
                     <li><a href="экспозиция.html">Экспозиция</a></li>
@@ -44,7 +44,7 @@
         </nav>
     </header>
     <main class="gallery">
-        <section class="container">
+        <section class="cont">
             <section class="line1">
                 <section class="item">
                     <img class="heart" id="1" src="img\img.png" alt="like">
