--- a/художники.html
+++ b/художники.html
@@ -4,19 +4,36 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
-    <base href="https://karmazinwlad.github.io/Oktyabr/">
- <link rel="stylesheet" href="C:\Users\karma\Desktop\www\css\main.css">
+    <base href="C:\Users\karma\Desktop\site\">
+ <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
     <header class="container">
         <nav>
             <a class="favorite" href="/Избранное.html"><img src="C:\Users\karma\Desktop\www\img\img.png" alt="Избранное"></a>
-            <ul class="first">
-                <li><a href="О проекте.html">О проекте</a></li>
-                <li><a href="экспозиция.html">Экспозиция</a></li>
-                <li class="active"><a href="художники.html">Художники</a></li>
-                <li><a href="Связаться с нами.html">Связаться с нами</a></li>
+            <ul class="burgerMenu" id="burgerMenu">
+                <li><div class="burger" id="burger">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                </div></li> 
+                <li>
+                    <ul id="popup" class="popup" style="display: none;">
+                        <li><a href="О проекте.html">О проекте</a></li>
+                        <li><a href="экспозиция.html">Экспозиция</a></li>
+                        <li class="active"><a href="художники.html">Художники</a></li>
+                        <li><a href="Связаться с нами.html">Связаться с нами</a></li>
+                    </ul>
+                </li>
             </ul>
+            <div id="MainMenu" class="MainMenu">
+                <ul class="first">
+                    <li><a href="О проекте.html">О проекте</a></li>
+                    <li><a href="экспозиция.html">Экспозиция</a></li>
+                    <li class="active"><a href="художники.html">Художники</a></li>
+                    <li><a href="Связаться с нами.html">Связаться с нами</a></li>
+                </ul>
+            </div>
             <div class="line"></div>
             <ul class="second">
                 <li><a href="index.html"><b>НОЯБРЬ</b></a></li>
@@ -41,6 +58,7 @@
             </ul>
         </nav>
         <img id="КАРМАЗИН" src="img\Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина">
+        <script type="text/javascript" src="js\burger.js"></script>
     </main>
  </body>
 </html>
