--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initialscale=1.0">
     <title>ГаллереяОктбрь</title>
-    <base href="https://karmazinwlad.github.io/Oktyabr/">
+    <base href="C:\Users\karma\Desktop\site\">
     <link rel="stylesheet" href="css\main.css">
     <style type="text/css" id="operaUserStyle"></style>
 </head>
