--- a/художники.html
+++ b/художники.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
-    <base href="https://karmazinwlad.github.io/Oktyabr/">
+    <base href="C:\Users\karma\Desktop\site\">
  <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
@@ -45,10 +45,10 @@
         </nav>
     </header>
     <main>
-        <nav>
+        <nav class="spisok">
             <ul class="ul">
                 <li><a href="художники.html#КАРМАЗИН">КАРМАЗИН ВАСИЛИЙ ОЛЕГОВИЧ</a></li>
-                <li><a href="#">АБАШИН</a></li>
+                <li><a href="художники.html#КУСТАР">КУСТАР СОЮЗ</a></li>
                 <li><a href="#">ВИКТОР ФЁДОРОВИЧ АБОЛИХИН</a></li>
                 <li><a href="#">КОНСТАНТИН ЕГОРОВИЧ АБУТКОВ</a></li>
                 <li><a href="#">НИКОЛАЙ ГРИГОРЬЕВИЧ АГИН</a></li>
@@ -57,7 +57,32 @@
                 <li><a href="#">ИВАН АКИМОВИЧ АЛАДЖАЛОВ</a></li>
             </ul>
         </nav>
-        <img id="КАРМАЗИН" src="img\Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина">
+        <section class="example" id="КАРМАЗИН">
+            <section class="overflow">
+                <section class="art">
+                    <div><img src="img/vasya.png" alt="Василий Кармазин"></div>
+                    <div><img src="img/Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина"></div>
+                    <div><img src="img/foto1.png" alt="Работа Василия Кармазина"></div>
+                    <div><img src="img/foto2.png" alt="Работа Василия Кармазина"></div>
+                    <div><img src="img/foto3.png" alt="Работа Василия Кармазина"></div>
+                </section>
+            </section>
+            <p class="auth">василий кармазин</p>
+            <div class="Line"></div>
+        </section>
+        <section class="example" id="КУСТАР">
+            <section class="overflow">
+                <section class="art">
+                    <div><img src="img/foto4.png" alt="Кустар Союз"></div>
+                    <div><img src="img/foto5.png" alt="Работа Кустар Союза"></div>
+                    <div><img src="img/foto5.png" alt="Работа Кустар Союза"></div>
+                    <div><img src="img/foto5.png" alt="Работа Кустар Союза"></div>
+                    <div><img src="img/foto5.png" alt="Работа Кустар Союза"></div>
+                </section>
+            </section>
+            <p class="auth">кустар союз</p>
+            <div class="Line"></div>
+        </section>
         <script type="text/javascript" src="js\burger.js"></script>
     </main>
  </body>
