--- a/экспозиция.html
+++ b/экспозиция.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
- <base href="https://karmazinwlad.github.io/Oktyabr/">
+ <base href="C:\Users\karma\Desktop\site\">
  <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
