--- a/Связаться с нами.html
+++ b/Связаться с нами.html
@@ -19,25 +19,25 @@
                 </div></li> 
                 <li>
                     <ul id="popup" class="popup" style="display: none;">
-                        <li class="active"><a href="О проекте.html">О проекте</a></li>
+                        <li><a href="О проекте.html">О проекте</a></li>
                         <li><a href="экспозиция.html">Экспозиция</a></li>
                         <li><a href="художники.html">Художники</a></li>
-                        <li><a href="Связаться с нами.html">Связаться с нами</a></li>
+                        <li class="active"><a href="Связаться с нами.html">Связаться с нами</a></li>
                     </ul>
                 </li>
             </ul>
             <div id="MainMenu" class="MainMenu">
                 <ul class="first">
-                    <li class="active"><a href="О проекте.html">О проекте</a></li>
+                    <li><a href="О проекте.html">О проекте</a></li>
                     <li><a href="экспозиция.html">Экспозиция</a></li>
                     <li><a href="художники.html">Художники</a></li>
-                    <li><a href="Связаться с нами.html">Связаться с нами</a></li>
+                    <li class="active"><a href="Связаться с нами.html">Связаться с нами</a></li>
                 </ul>
             </div>
             <div class="line"></div>
             <ul class="second">
                 <li><a href="index.html"><b>НОЯБРЬ</b></a></li>
-                <li class="actual">О проекте</li>
+                <li class="actual">Связаться с нами</li>
                 <li><a href="">НОЯБРЬ <sup class="small">студия</sup></a></li>
                 <div class="arrow-2"><div></div></div>
             </ul>
@@ -45,13 +45,7 @@
         </nav>
     </header>
     <main>
-        <h1>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie</h1>
-        <h2>КТО МЫ</h2>
-        <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-        <h2>ГДЕ МЫ</h2>
-        <address>
-            <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo sequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum zzril delenit augue duis dolore te feugait nulla facilisi.</p>
-        </address>
+        <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa651c4ab8ea9ed6619dbd1b183a23d2c47afd8b7f2956a6f4a70fed8348f0a68&amp;source=constructor" frameborder="0"></iframe>
         <h2>КОНТАКТЫ</h2>
         <ul>
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna</li>
