--- a/экспозиция.html
+++ b/экспозиция.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
- <base href="https://karmazinwlad.github.io/Oktyabr/">
+ <base href="C:\Users\karma\Desktop\site\">
  <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
@@ -37,16 +37,35 @@
             <div class="line"></div>
             <ul class="second">
                 <li><a href="index.html"><b>НОЯБРЬ</b></a></li>
-                <li>Экспозиция</li>
+                <li class="actual">Экспозиция</li>
                 <li><a href="">НОЯБРЬ <sup class="small">студия</sup></a></li>
                 <div class="arrow-2"><div></div></div>
             </ul>
             <div class="line"></div>
         </nav>
     </header>
-    <main>
-        <img src="" alt="картинка">
+    <main class="ecspo">
+        <map name="ecs">
+            <area id="area1" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area2" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area3" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area4" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area5" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area6" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area7" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area8" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area9" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area10" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area11" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area12" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area13" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area14" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area15" shape="rect" coords="" href="художники.html" alt="">
+            <area id="area16" shape="rect" coords="" href="художники.html" alt="">
+        </map>
+        <img usemap="#ecs" id="map" src="img/ecspo.jpg" alt="картинка">
         <script type="text/javascript" src="js\burger.js"></script>
+        <script type="text/javascript" src="js\ekspo.js"></script>
     </main>
  </body>
 </html>
