--- a/художники.html
+++ b/художники.html
@@ -4,13 +4,13 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
-    <base href="https://karmazinwlad.github.io/Oktyabr/">
+    <base href="C:\Users\karma\Desktop\site\">
  <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
     <header class="container">
         <nav>
-            <a class="favorite" href="/Избранное.html"><img src="img\img.png" alt="Избранное"></a>
+            <a class="favorite" href="/Избранное.html"><img src="C:\Users\karma\Desktop\www\img\img.png" alt="Избранное"></a>
             <ul class="burgerMenu" id="burgerMenu">
                 <li><div class="burger" id="burger">
                     <div class="bar"></div>
@@ -37,7 +37,7 @@
             <div class="line"></div>
             <ul class="second">
                 <li><a href="index.html"><b>НОЯБРЬ</b></a></li>
-                <li>Художники</li>
+                <li class="actual">Художники</li>
                 <li><a href="">НОЯБРЬ <sup class="small">студия</sup></a></li>
                 <div class="arrow-2"><div></div></div>
             </ul>
