--- a/художники.html
+++ b/художники.html
@@ -60,11 +60,11 @@
         <section class="example" id="КАРМАЗИН">
             <section class="overflow">
                 <section class="art">
-                    <div><img src="img/vasya.png" alt="Василий Кармазин"></div>
-                    <div><img src="img/Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина"></div>
-                    <div><img src="img/foto1.png" alt="Работа Василия Кармазина"></div>
-                    <div><img src="img/foto2.png" alt="Работа Василия Кармазина"></div>
-                    <div><img src="img/foto3.png" alt="Работа Василия Кармазина"></div>
+                    <img src="img/vasya.png" alt="Василий Кармазин">
+                    <img src="img/Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина">
+                    <img src="img/foto1.png" alt="Работа Василия Кармазина">
+                    <img src="img/foto2.png" alt="Работа Василия Кармазина">
+                    <img src="img/foto3.png" alt="Работа Василия Кармазина">
                 </section>
             </section>
             <p class="auth">василий кармазин</p>
@@ -73,17 +73,18 @@
         <section class="example" id="КУСТАР">
             <section class="overflow">
                 <section class="art">
-                    <div><img src="img/foto4.png" alt="Кустар Союз"></div>
-                    <div><img src="img/foto5.png" alt="Работа Кустар Союза"></div>
-                    <div><img src="img/foto5.png" alt="Работа Кустар Союза"></div>
-                    <div><img src="img/foto5.png" alt="Работа Кустар Союза"></div>
-                    <div><img src="img/foto5.png" alt="Работа Кустар Союза"></div>
+                    <img src="img/foto4.png" alt="Кустар Союз">
+                    <img src="img/foto5.png" alt="Работа Кустар Союза">
+                    <img src="img/foto5.png" alt="Работа Кустар Союза">
+                    <img src="img/foto5.png" alt="Работа Кустар Союза">
+                    <img src="img/foto5.png" alt="Работа Кустар Союза">
                 </section>
             </section>
             <p class="auth">кустар союз</p>
             <div class="Line"></div>
         </section>
         <script type="text/javascript" src="js\burger.js"></script>
+        <script type="text/javascript" src="js\artist.js"></script>
     </main>
  </body>
 </html>
