--- a/художники.html
+++ b/художники.html
@@ -60,11 +60,11 @@
         <section class="example" id="КАРМАЗИН">
             <section class="overflow">
                 <section class="art">
-                    <img src="img/vasya.png" alt="Василий Кармазин">
-                    <img src="img/Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина">
-                    <img src="img/foto1.png" alt="Работа Василия Кармазина">
-                    <img src="img/foto2.png" alt="Работа Василия Кармазина">
-                    <img src="img/foto3.png" alt="Работа Василия Кармазина">
+                    <img class="part" src="img/vasya.png" alt="Василий Кармазин">
+                    <img class="part" src="img/Снимок экрана 2024-12-08 134053.png" alt="Работа Василия Кармазина">
+                    <img class="part" src="img/foto1.png" alt="Работа Василия Кармазина">
+                    <img class="part" src="img/foto2.png" alt="Работа Василия Кармазина">
+                    <img class="part" src="img/foto3.png" alt="Работа Василия Кармазина">
                 </section>
             </section>
             <p class="auth">василий кармазин</p>
@@ -73,11 +73,11 @@
         <section class="example" id="КУСТАР">
             <section class="overflow">
                 <section class="art">
-                    <img src="img/foto4.png" alt="Кустар Союз">
-                    <img src="img/foto5.png" alt="Работа Кустар Союза">
-                    <img src="img/foto5.png" alt="Работа Кустар Союза">
-                    <img src="img/foto5.png" alt="Работа Кустар Союза">
-                    <img src="img/foto5.png" alt="Работа Кустар Союза">
+                    <img class="part" src="img/foto4.png" alt="Кустар Союз">
+                    <img class="part" src="img/foto5.png" alt="Работа Кустар Союза">
+                    <img class="part" src="img/foto5.png" alt="Работа Кустар Союза">
+                    <img class="part" src="img/foto5.png" alt="Работа Кустар Союза">
+                    <img class="part" src="img/foto5.png" alt="Работа Кустар Союза">
                 </section>
             </section>
             <p class="auth">кустар союз</p>
