--- a/Связаться с нами.html
+++ b/Связаться с нами.html
@@ -47,7 +47,7 @@
     <main>
         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3Aa651c4ab8ea9ed6619dbd1b183a23d2c47afd8b7f2956a6f4a70fed8348f0a68&amp;source=constructor" frameborder="0"></iframe>
         <h2>КОНТАКТЫ</h2>
-        <ul>
+        <ul class="contact">
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna</li>
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna</li>
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna</li>
