--- a/художники.html
+++ b/художники.html
@@ -4,7 +4,7 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
-    <base href="https://karmazinwlad.github.io/Oktyabr/">
+ <base href="https://karmazinwlad.github.io/Oktyabr/">
  <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
@@ -56,6 +56,20 @@
                 <li><a href="#">ИВАН КОНСТАНТИНОВИЧ АКИМОВ</a></li>
                 <li><a href="#">ИВАН АКИМОВИЧ АЛАДЖАЛОВ</a></li>
             </ul>
+            <div class="galochka"><div></div></div>
+        </nav>
+        <nav class="spisok" id="burgerSpisok">
+            <ul class="ul">
+                <li><a href="художники.html#КАРМАЗИН">КАРМАЗИН ВАСИЛИЙ ОЛЕГОВИЧ</a></li>
+                <li><a href="художники.html#КУСТАР">КУСТАР СОЮЗ</a></li>
+                <li><a href="#">ВИКТОР ФЁДОРОВИЧ АБОЛИХИН</a></li>
+                <li><a href="#">КОНСТАНТИН ЕГОРОВИЧ АБУТКОВ</a></li>
+                <li><a href="#">НИКОЛАЙ ГРИГОРЬЕВИЧ АГИН</a></li>
+                <li><a href="#">АЛЕКСАНДР АЛЕКСЕЕВИЧ АЙВАЗОВСКИЙ</a></li>
+                <li><a href="#">ИВАН КОНСТАНТИНОВИЧ АКИМОВ</a></li>
+                <li><a href="#">ИВАН АКИМОВИЧ АЛАДЖАЛОВ</a></li>
+            </ul>
+            <div class="galochka"><div></div></div>
         </nav>
         <section class="example" id="КАРМАЗИН">
             <section class="overflow">
