--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <main class="gallery">
         <section class="cont">
             <section class="line1">
-                <section class="item">
+                <section class="item" id="101">
                     <img class="heart" id="1" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -54,7 +54,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="102">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -62,7 +62,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="103">
                     <img class="heart" src="img\img.png" alt="like">
                     <img id="12" class="gallery_item" src="img\Снимок экрана 2024-12-08 135054.png" alt="Работа">
                     <p class="author">сева бойцов</p>
@@ -70,7 +70,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="104">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -78,7 +78,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="105">
                     <img class="heart" id="0" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -86,7 +86,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="106">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 135054.png" alt="Работа">
                     <p class="author">сева бойцов</p>
@@ -94,7 +94,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="107">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -104,7 +104,7 @@
                 </section>
             </section>
             <section id="11" class="line2">
-                <section class="item">
+                <section class="item" id="108">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -112,7 +112,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="109">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -120,7 +120,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="110">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 135054.png" alt="Работа">
                     <p class="author">сева бойцов</p>
@@ -128,7 +128,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="111">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -136,7 +136,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="112">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -162,7 +162,7 @@
                 </section>
             </section>
             <section class="line1">
-                <section class="item">
+                <section class="item" id="113">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -170,7 +170,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="114">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -178,7 +178,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="115">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 135054.png" alt="Работа">
                     <p class="author">сева бойцов</p>
@@ -186,7 +186,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="116">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -194,7 +194,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="117">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -202,7 +202,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="118">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 135054.png" alt="Работа">
                     <p class="author">сева бойцов</p>
@@ -210,7 +210,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="119">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -220,7 +220,7 @@
                 </section>
             </section>
             <section class="endline">
-                <section class="item">
+                <section class="item" id="120">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -228,7 +228,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="121">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -236,7 +236,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="122">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 135054.png" alt="Работа">
                     <p class="author">сева бойцов</p>
@@ -244,7 +244,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="123">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -252,7 +252,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="124">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -260,7 +260,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="125">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 135054.png" alt="Работа">
                     <p class="author">сева бойцов</p>
@@ -268,7 +268,7 @@
                     <p class="atribute">70x70 бумага/акварель</p>
                     <p class="year">2024</p>
                 </section>
-                <section class="item">
+                <section class="item" id="126">
                     <img class="heart" src="img\img.png" alt="like">
                     <img class="gallery_item" src="img\Снимок экрана 2024-12-08 225849.png" alt="Работа"> 
                     <p class="author">сева бойцов</p>
@@ -280,6 +280,7 @@
         </section>
         <script type="text/javascript" src="js\main.js"></script>
         <script type="text/javascript" src="js\burger.js"></script>
+        <script type="text/javascript" src="js\heart.js"></script>
     </main>
  
 </body></html>
