--- a/О проекте.html
+++ b/О проекте.html
@@ -10,7 +10,7 @@
  <body>
     <header class="container">
         <nav>
-            <a class="favorite" href="/Избранное.html"><img src="img\img.png" alt="Избранное"></a>
+            <a class="favorite" href="Избранное.html"><img src="img\img.png" alt="Избранное"></a>
             <ul class="burgerMenu" id="burgerMenu">
                 <li><div class="burger" id="burger">
                     <div class="bar"></div>
@@ -59,6 +59,7 @@
             <li>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna</li>
         </ul>
         <script type="text/javascript" src="js\burger.js"></script>
+        <script type="text/javascript" src="js\heart.js"></script>
     </main>
  </body>
 </html>
