--- a/экспозиция.html
+++ b/экспозиция.html
@@ -10,7 +10,7 @@
  <body>
     <header class="container">
         <nav>
-            <a class="favorite" href="/Избранное.html"><img src="img\img.png" alt="Избранное"></a>
+            <a class="favorite" href="Избранное.html"><img src="img\img.png" alt="Избранное"></a>
             <ul class="burgerMenu" id="burgerMenu">
                 <li><div class="burger" id="burger">
                     <div class="bar"></div>
@@ -66,6 +66,7 @@
         <img usemap="#ecs" id="map" src="img/ecspo.jpg" alt="картинка">
         <script type="text/javascript" src="js\burger.js"></script>
         <script type="text/javascript" src="js\ekspo.js"></script>
+        <script type="text/javascript" src="js\heart.js"></script>
     </main>
  </body>
 </html>
