--- a/художники.html
+++ b/художники.html
@@ -4,13 +4,13 @@
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initialscale=1.0">
  <title>ГаллереяОктбрь</title>
- <base href="https://karmazinwlad.github.io/Oktyabr/">
+    <base href="https://karmazinwlad.github.io/Oktyabr/">
  <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
     <header class="container">
         <nav>
-            <a class="favorite" href="/Избранное.html"><img src="img\img.png" alt="Избранное"></a>
+            <a class="favorite" href="Избранное.html"><img src="img\img.png" alt="Избранное"></a>
             <ul class="burgerMenu" id="burgerMenu">
                 <li><div class="burger" id="burger">
                     <div class="bar"></div>
@@ -99,6 +99,7 @@
         </section>
         <script type="text/javascript" src="js\burger.js"></script>
         <script type="text/javascript" src="js\artist.js"></script>
+        <script type="text/javascript" src="js\heart.js"></script>
     </main>
  </body>
 </html>
