--- a/Избранное.html
+++ b/Избранное.html
@@ -44,7 +44,9 @@
         </nav>
     </header>
     <main>
-        <ul id="storage"></ul>
+        <section class="fav">
+            <ul id="storage"></ul>
+        </section>
         <script type="text/javascript" src="js\burger.js"></script>
         <script type="text/javascript" src="js\favor.js"></script>
     </main>
