--- a/экспозиция.html
+++ b/экспозиция.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ru">
  <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initialscale=1.0">
- <title>ГаллереяОктбрь</title>
- <base href="https://karmazinwlad.github.io/Oktyabr/">
- <link rel="stylesheet" href="css\main.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initialscale=1.0">
+    <title>ГаллереяОктбрь</title>
+    <base href="https://karmazinwlad.github.io/Oktyabr/">
+    <link rel="stylesheet" href="css\main.css">
  </head>
  <body>
     <header class="container">
@@ -44,26 +44,28 @@
             <div class="line"></div>
         </nav>
     </header>
-    <main class="ecspo">
-        <map name="ecs">
-            <area id="area1" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №1">
-            <area id="area2" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №2">
-            <area id="area3" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №3">
-            <area id="area4" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №4">
-            <area id="area5" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №5">
-            <area id="area6" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №6">
-            <area id="area7" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №7">
-            <area id="area8" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №8">
-            <area id="area9" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №9">
-            <area id="area10" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №10">
-            <area id="area11" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №11">
-            <area id="area12" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №12">
-            <area id="area13" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №13">
-            <area id="area14" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №14">
-            <area id="area15" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №15">
-            <area id="area16" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №16">
-        </map>
-        <img usemap="#ecs" id="map" src="img/ecspo.jpg" alt="картинка">
+    <main class="ecs">
+        <section class="ecspo">
+            <map name="ecs">
+                <area id="area1" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №1">
+                <area id="area2" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №2">
+                <area id="area3" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №3">
+                <area id="area4" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №4">
+                <area id="area5" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №5">
+                <area id="area6" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №6">
+                <area id="area7" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №7">
+                <area id="area8" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №8">
+                <area id="area9" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №9">
+                <area id="area10" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №10">
+                <area id="area11" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №11">
+                <area id="area12" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №12">
+                <area id="area13" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №13">
+                <area id="area14" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №14">
+                <area id="area15" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №15">
+                <area id="area16" shape="rect" coords="" href="Связаться с нами.html" alt="Работа №16">
+            </map>
+            <img usemap="#ecs" id="map" src="img/ecspo.jpg" alt="картинка">
+        </section>
         <script type="text/javascript" src="js\burger.js"></script>
         <script type="text/javascript" src="js\ekspo.js"></script>
         <script type="text/javascript" src="js\heart.js"></script>
